admin/assets/less/admin/mura-grid.less
/* ... */
#tabFlat .mura-table-grid .add i { margin-top: 0; }

p + .mura-table-grid { margin-top: 12px;}

// Add Content

#newContentMenu {

	background-color: #FFF;
	border-radius: 1px;
	box-shadow: 1px 3px 18px rgba(0,0,0,.35);
	font-size: 13px;
	padding: 0;
	position: absolute;
	width: 160px;
	z-index: 20;

	#newContent,
	#newZoom{
		border-bottom: 1px solid #E8E8E8;
	}
	li.delete,
	li.view{
		border-top: 1px solid #E8E8E8;
	}

	ul {
		margin: 0;
		overflow: hidden;
		.border-radius(2px);
		padding-left: 0;
		padding-bottom: 4px;
	}

	li {
		list-style: none;
		margin: 0;
		padding: 0;
		position: relative;
		border-top: 1px dotted rgba(255,255,255,.2);
			&:first-child { 
				border-top: 0; 
			}
		}

	li > a {
		display: block;
		text-decoration: none;
		margin: 0;
		padding: 3px 12px;
		line-height: 24px;
		color: #999;

			i {
				font-size: 14px;
				margin-right: 3px;
				min-width: 18px;
				position: relative;
				top: 2px;
			}

			&#newZoom i { top: 0; }

		}

	li > a:hover {
		color: #545454;
		text-decoration: none;

		i {
			 color: #545454; 
			}

		}

}

.mura-table-grid {
	margin: 0 0 16px 0;
	border-collapse: collapse;
	border: 1px solid #DBDBDB;
	clear: both;
	width: 100%;
}

h3 + table {
	margin-top: 1em;
}

#content #emailBroadcasts table {
	width: 580px;
	clear: both;
}

#siteSearch table#metadata { /*For FCKEditor PopUps*/
	width: auto;
}

#userActivityData,
#popularContent{
	.make-row();
	margin-left: 0;
	margin-right: 0;
}
#userActivity table,
#popularContent table {
	.make-xs-column(12);
	.make-lg-column(5.75);
	margin-bottom: 15px;
	margin-right: 1% !important;
	clear:none;
}
#userActivity table + table,
#popularContent table + table {
	margin-right: 0 !important;
	margin-left: 0 !important;
	float: right;
}

#popularContent #topPages{
	float: left;
}


#popUp table {
	width: 100%;
}

#ctrash table {
	width: 920px;
}

table + .divide {
	margin-top: 8px;
}

#cdashboard table + .divide {
	margin-top: 0;
}

.mura-table-grid th.alt {
	text-align: left;
	background-image: none;
	background-color: #f7f7f7;
	font-weight: normal;
	border: 0;
}

#cdashboard table th, #cdashboard table td {
	text-align: left;
}

.mura-table-grid th span {
	font-weight: normal;
}

#cdashboard #recentcontent li {
	margin: 0 0 .5em;
	line-height: 1.25em;
}

#ccategory .mura-table-grid td.add { 
	padding-top: 0; 
	border-right: none !important;
}
#ccategory .mura-table-grid td.add + td{ 
	border-left: none !important;
}
#ccategory .mura-table-grid th.add { 
	border-right: none !important;
}
#ccategory .mura-table-grid th.add + th{ 
	border-left: none !important;
}
.mura-table-grid .alt td {
	background-color: #fcfeff;
}

.mura-table-grid  td.email {
	text-transform: lowercase;
}

.mura-table-grid  th.url, table td.url {
	text-align: left;
}

.mura-table-grid  tr.alt th, .mura-table-grid  tr.alt td, .alt dl {
	background-color: #FCFEFF;
}

.mura-table-grid .var-width {
	max-width: 100px;
	overflow: hidden;
	text-align: left;
	text-overflow: ellipsis;
	white-space: nowrap;
	width: inherit;

/*
	> a.draftprompt {
		position: relative;
	  overflow: hidden;
	  text-overflow: ellipsis;
	  white-space: nowrap;
	  display:block;
	  max-width: 90%;
	}
*/
}

.control-group > .mura-grid {
	margin-top: 8px !important;
}

.mura-table-grid td.add a, 
.mura-grid a.add {
	.inline-block;
	width: 16px;
	height: 16px;
	margin: 0 auto;
	padding: 0;
	text-align: center;

	i {
		width: 16px;
		margin: 2px auto 0;
	}

}

.mura-grid a.add { /* really only needed for ie7 */
	width: 24px;
	height: 28px;
}

table td.add a:hover {
	text-decoration: none;
}

table td.var-width li,
table#fileList td.var-width a,
.overview span
 {
	color: #333232;
	text-decoration: none;
	margin: 0;
	padding: 0;
}

table#fileList td.var-width a,
.overview .type span {
	padding: 2px 0 2px 20px;
	background-position: 0px 1px;
}

.table td.selected-icon {
	text-align: center;
}

.mura-grid, .mura-table-grid {

	.scheduled a {

				border: 0;

				i {

					top: 3px;
					position: relative;

					&:hover {
						text-decoration: none;
						color: @grayDarker;
						}

					}
			}

			td.scheduled a span {
				max-width: 110px;
				text-align: center;
			}

		}

#docTitle {
	padding-left: 20px;
	background-position: left center;
}

table.cfdebug {
	width: auto !important;
}

table.cfdebug td {
	text-align: left;
	background: #fff;
}

table.cfdebug td a {

}

.mura-row {
	background: @white;
}


.table tbody tr:hover td,
.table tbody tr:hover th,
#mura-nodes dl:hover,
.mura-row:hover {
  background-color: #eaf4fd;
}

.mura-row.alt {
  background-color: @tableBackgroundAccent;
}

.mura-row.alt:hover {
  background-color: @tableBackgroundHover;
}

// Category Manager

#ccategory .addNew a {
	border-bottom: 0px;
}

#ccategory li {
	padding-left: 0;
}

